--- a/rtsutil/Makefile.am
+++ b/rtsutil/Makefile.am
@@ -1,8 +1,9 @@
 noinst_LTLIBRARIES = librtsutil.la
 
-librtsutil_la_CFLAGS = -I. -I../util -ggdb @fftw3_CFLAGS@ @bladeRF_CFLAGS@
+librtsutil_la_CFLAGS = -I. -I../util -ggdb @fftw3_CFLAGS@ @bladeRF_CFLAGS@ \
+	@asoundlib_CFLAGS@
 
 librtsutil_la_SOURCES = common.h file.c param.c param.h source.c source.h \
-	spectrogram.c spectrogram.h bladerf.c bladerf.h
+	spectrogram.c spectrogram.h bladerf.c bladerf.h alsa.c alsa.h
 
 
